Fixed some bugs (like a too small line height)

--- a/css/flashcards.css
+++ b/css/flashcards.css
@@ -16,6 +16,8 @@
   transition: transform 1s;
   width: 100%;
   height: 100%;
+  padding: 5%;
+  text-align: center;
   background-color: var(--light);
   transform-style: preserve-3d;
 }
@@ -26,7 +28,13 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 90%;
   font-size: 6vh;
+  line-height: 1.15em;
   transform: translate(-50%, -50%);
   backface-visibility: hidden;
 }
